<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_appearance">
        <ListPreference
            app:iconSpaceReserved="false"
            android:key="theme"
            android:title="@string/pref_theme"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="system"
            android:summary="%s" />
        <Preference
            app:iconSpaceReserved="false"
            android:key="accent_picker"
            android:title="@string/pref_accent" />
        <Preference
            app:iconSpaceReserved="false"
            android:key="open_sizes"
            android:title="@string/pref_sizes"
            android:summary="@string/pref_sizes_summary" />
        <ListPreference
            app:iconSpaceReserved="false"
            android:key="message_style"
            android:title="@string/pref_message_style"
            android:entries="@array/style_entries"
            android:entryValues="@array/style_values"
            android:defaultValue="bubble"
            android:summary="%s" />
        <ListPreference
            app:iconSpaceReserved="false"
            android:key="layout_direction"
            android:title="@string/pref_layout_direction"
            android:entries="@array/direction_entries"
            android:entryValues="@array/direction_values"
            android:defaultValue="auto"
            android:summary="%s" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_sound">
        <Preference
            app:iconSpaceReserved="false"
            android:key="default_tone"
            android:title="@string/pref_default_tone" />
        <SwitchPreferenceCompat
            app:singleLineTitle="false"
            app:iconSpaceReserved="false"
            android:key="vibrate"
            android:title="@string/pref_vibrate"
            android:summary="@string/pref_vibrate_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_behavior">
        <SwitchPreferenceCompat
            app:singleLineTitle="false"
            app:iconSpaceReserved="false"
            android:key="show_search_bar"
            android:title="@string/pref_show_search_short"
            android:defaultValue="false" />
        <Preference
            app:iconSpaceReserved="false"
            android:key="open_search"
            android:title="@string/open_search_pref" />
        <SwitchPreferenceCompat
            app:singleLineTitle="false"
            app:iconSpaceReserved="false"
            android:key="delivery_reports"
            android:title="@string/pref_delivery_reports"
            android:defaultValue="true" />
        <ListPreference
            app:iconSpaceReserved="false"
            android:key="default_group_mode"
            android:title="@string/pref_default_group_mode"
            android:entries="@array/group_mode_entries"
            android:entryValues="@array/group_mode_values"
            android:defaultValue="broadcast"
            android:summary="%s" />
        <ListPreference
            app:iconSpaceReserved="false"
            android:key="link_opening"
            android:title="@string/pref_link_opening"
            android:entries="@array/link_entries"
            android:entryValues="@array/link_values"
            android:defaultValue="ask"
            android:summary="%s" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_blocking">
        <Preference
            app:iconSpaceReserved="false"
            android:key="open_keywords"
            android:title="@string/open_keywords_pref" />
        <Preference
            app:iconSpaceReserved="false"
            android:key="open_blocked"
            android:title="@string/open_blocked_pref" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_data">
        <ListPreference
            app:iconSpaceReserved="false"
            android:key="bin_retention"
            android:title="@string/pref_bin_retention"
            android:entries="@array/bin_entries"
            android:entryValues="@array/bin_values"
            android:defaultValue="30"
            android:summary="%s" />
        <Preference
            app:iconSpaceReserved="false"
            android:key="open_bin"
            android:title="@string/open_bin_pref" />
        <Preference
            app:iconSpaceReserved="false"
            android:key="open_hidden"
            android:title="@string/open_hidden_pref" />
        <Preference
            app:iconSpaceReserved="false"
            android:key="backup_now"
            android:title="@string/pref_backup" />
        <Preference
            app:iconSpaceReserved="false"
            android:key="restore_backup"
            android:title="@string/pref_restore" />
        <Preference
            app:iconSpaceReserved="false"
            android:key="resync"
            android:title="@string/resync_pref" />
        <Preference
            app:iconSpaceReserved="false"
            android:key="refresh_contacts"
            android:title="@string/refresh_contacts_pref" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_device">
        <ListPreference
            app:iconSpaceReserved="false"
            android:key="softkey_mode"
            android:title="@string/pref_softkey_mode"
            android:entries="@array/softkey_entries"
            android:entryValues="@array/softkey_values"
            android:defaultValue="auto"
            android:summary="%s" />
        <Preference
            app:iconSpaceReserved="false"
            android:key="open_softkeys"
            android:title="@string/open_softkey_config" />
    </PreferenceCategory>
</PreferenceScreen>
