<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        android:key="sent_colored"
        android:title="@string/pref_sent_colored"
        android:summary="@string/pref_sent_colored_summary"
        android:defaultValue="true" />
    <Preference
        app:iconSpaceReserved="false"
        android:key="sent_color"
        android:title="@string/pref_sent_color"
        android:summary="@string/pref_sent_color_summary"
        android:dependency="sent_colored" />
    <SwitchPreferenceCompat
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        android:key="color_incoming"
        android:title="@string/pref_color_incoming"
        android:summary="@string/pref_color_incoming_summary"
        android:defaultValue="false" />
    <Preference
        app:iconSpaceReserved="false"
        android:key="incoming_color"
        android:title="@string/pref_incoming_color"
        android:summary="@string/pref_incoming_color_summary"
        android:dependency="color_incoming" />
    <SwitchPreferenceCompat
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        android:key="group_member_colors"
        android:title="@string/pref_group_colors"
        android:summary="@string/pref_group_colors_summary"
        android:defaultValue="false" />
</PreferenceScreen>
