<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        android:key="msg_text_size"
        android:title="@string/pref_msg_text_size"
        android:summary="@string/desc_msg_text_size"
        android:entries="@array/msg_size_entries"
        android:entryValues="@array/msg_size_values"
        android:defaultValue="16" />

    <ListPreference
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        android:key="time_text_size"
        android:title="@string/pref_time_text_size"
        android:summary="@string/desc_time_text_size"
        android:entries="@array/time_size_entries"
        android:entryValues="@array/time_size_values"
        android:defaultValue="11" />

    <ListPreference
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        android:key="list_density"
        android:title="@string/pref_list_density"
        android:summary="@string/desc_list_density"
        android:entries="@array/density_entries"
        android:entryValues="@array/density_values"
        android:defaultValue="comfortable" />

    <ListPreference
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        android:key="ui_scale"
        android:title="@string/pref_ui_scale"
        android:summary="@string/desc_ui_scale"
        android:entries="@array/scale_entries"
        android:entryValues="@array/scale_values"
        android:defaultValue="1.0" />

    <ListPreference
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        android:key="focus_stroke"
        android:title="@string/pref_focus_stroke"
        android:summary="@string/desc_focus_stroke"
        android:entries="@array/stroke_entries"
        android:entryValues="@array/stroke_values"
        android:defaultValue="2" />

    <ListPreference
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        android:key="compose_max_lines"
        android:title="@string/pref_compose_max_lines"
        android:summary="@string/desc_compose_max_lines"
        android:entries="@array/compose_lines_entries"
        android:entryValues="@array/compose_lines_values"
        android:defaultValue="4" />
</PreferenceScreen>
