<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:iconSpaceReserved="false"
        android:key="softkey_mode"
        android:title="@string/pref_softkey_mode"
        android:entries="@array/softkey_entries"
        android:entryValues="@array/softkey_values"
        android:defaultValue="auto"
        android:summary="%s" />
    <Preference
        app:iconSpaceReserved="false"
        android:key="open_softkeys"
        android:title="@string/open_softkey_config" />
    <SwitchPreferenceCompat
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        android:key="softkeys_focusable"
        android:title="@string/pref_softkeys_focusable"
        android:summary="@string/pref_softkeys_focusable_summary"
        android:defaultValue="false" />
    <Preference
        app:iconSpaceReserved="false"
        android:selectable="false"
        android:summary="@string/softkey_trouble_hint" />
</PreferenceScreen>
